--- a/indexstyle.css
+++ b/indexstyle.css
@@ -6,11 +6,12 @@ body{
     font-family: 'Times New Roman';
     color: white;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .links:hover{
     color: cornflowerblue;
+    transition-duration: 0.3s;
 }
 
 .linkbox{
