--- a/indexstyle.css
+++ b/indexstyle.css
@@ -3,7 +3,7 @@ body{
 }
 
 .links{
-    font-family: 'Times New Roman';
+    font-family: Arial;
     color: white;
     text-decoration: none;
     font-size: 20px;
